style: Add navbar style

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <body>
     <navbar id="navbar">
       <div class="navbar-container">
-        <img src="./assets/images/logo.png" alt="" />
+        <img class="logo" src="./assets/images/logo.png" alt="" />
         <ul class="navbar-items">
           <li class="navbar-item">Premium</li>
           <li class="navbar-item">Ajuda</li>
           <li class="navbar-item">Baixar</li>
-          <li class="navbar-item">INscrever-se</li>
+          <li class="navbar-item">Inscrever-se</li>
           <li class="navbar-item">Entrar</li>
         </ul>
       </div>
