feat: footer structure

--- a/index.html
+++ b/index.html
@@ -39,5 +39,28 @@
         </div>
       </div>
     </main>
+    <footer id="footer">
+      <div class="footer-content">
+        <img class="logo" src="./assets/images/logo.png" alt="" />
+        <ul class="footer-menu">
+          <li class="footer-item">Sobre</li>
+          <li class="footer-item">Empregos</li>
+          <li class="footer-item">For the Record</li>
+        </ul>
+        <ul class="footer-menu">
+          <li class="footer-item">Para Artístas</li>
+          <li class="footer-item">Desenvolvedores</li>
+          <li class="footer-item">Marcas</li>
+          <li class="footer-item">Investidores</li>
+          <li class="footer-item">Fornecedores</li>
+        </ul>
+        <ul class="footer-menu">
+          <li class="footer-item">Ajuda</li>
+          <li class="footer-item">Player da Web</li>
+          <li class="footer-item">Aplicativo móvel grátis</li>
+        </ul>
+        <div class="socials"></div>
+      </div>
+    </footer>
   </body>
 </html>
