--- a/index.html
+++ b/index.html
@@ -41,26 +41,57 @@
     </main>
     <footer id="footer">
       <div class="footer-content">
-        <img class="logo" src="./assets/images/logo.png" alt="" />
+        <img src="img/logo.png" alt="" class="logo" />
         <ul class="footer-menu">
-          <li class="footer-item">Sobre</li>
-          <li class="footer-item">Empregos</li>
-          <li class="footer-item">For the Record</li>
+          <p>Empresa</p>
+          <li class="footer-menu-item">Sobre</li>
+          <li class="footer-menu-item">Empregos</li>
+          <li class="footer-menu-item">For the record</li>
         </ul>
+
         <ul class="footer-menu">
-          <li class="footer-item">Para Artístas</li>
-          <li class="footer-item">Desenvolvedores</li>
-          <li class="footer-item">Marcas</li>
-          <li class="footer-item">Investidores</li>
-          <li class="footer-item">Fornecedores</li>
+          <p>Comunidades</p>
+          <li class="footer-menu-item">Para Artistas</li>
+          <li class="footer-menu-item">Desenvolvedores</li>
+          <li class="footer-menu-item">Marcas</li>
+          <li class="footer-menu-item">Investidores</li>
+          <li class="footer-menu-item">Fornecedores</li>
         </ul>
+
         <ul class="footer-menu">
-          <li class="footer-item">Ajuda</li>
-          <li class="footer-item">Player da Web</li>
-          <li class="footer-item">Aplicativo móvel grátis</li>
+          <p>Links úteis</p>
+          <li class="footer-menu-item">Ajuda</li>
+          <li class="footer-menu-item">Player da Web</li>
+          <li class="footer-menu-item">Aplicativo móvel grátis</li>
         </ul>
-        <div class="socials"></div>
+
+        <div class="socials">
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook-f"></i>
+        </div>
+      </div>
+      <div class="footer-info">
+        <ul class="footer-info-items">
+          <li class="footer-info-item">Legal</li>
+          <li class="footer-info-item">Centro de Privacidade</li>
+          <li class="footer-info-item">Política de privacidade</li>
+          <li class="footer-info-item">Cookies</li>
+          <li class="footer-info-item">Sobre anúncios</li>
+        </ul>
+
+        <div class="rights">
+          <div class="country">
+            <p>Brasil</p>
+            <img src="./assets/images/brazil.png" alt="" class="brazil-flag" />
+          </div>
+          <p>&copy; 2020 Spotify AB</p>
+        </div>
       </div>
     </footer>
+    <script
+      src="https://kit.fontawesome.com/e48fef6c99.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
